--- a/welcome.css
+++ b/welcome.css
@@ -13,12 +13,12 @@
     background-position: center;
     background-size: cover;
 
- }
+}
  .wrapper{
     width: 100%;
     padding: 0px 80px;
 
- }
+}
  .navbar{
     width: 100%;
     display: flex;
@@ -27,16 +27,16 @@
     padding: 10px 0px;
     position: relative;
     z-index: 1;
- }
+}
  .navbar ul{
     display: flex;
     justify-content: center;
     align-items: center;
     margin-top:10px;
- }
+}
  .navbar ul li{
     list-style:none;
- }
+}
  .navbar ul li a{
     padding:10px 18px;
     border-radius:5px;
@@ -45,10 +45,10 @@
     color:#fff;
     text-decoration:none ;
 
- }
+}
  .navbar ul li a:hover{
     background-color: #5d5d5d;
- }
+}
  .navbar h1{
     color: #fff;
     font-size: 35px;
@@ -56,7 +56,7 @@
     text-transform: uppercase;
     margin-top:10px;
 
- }
+}
  .content{
     width:100%;
     min-height:100vh;
@@ -67,16 +67,16 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
- }
+}
  .content h1{
     font-size: 45px;
     color: #fff;
     font-weight: 400;
- }
+}
  .content p{
     font: size 16px;
     color: #fff;
- }
+}
  .content a{
     text-decoration: none;
     margin-top: 20px;
@@ -87,15 +87,15 @@
     background-color: #9de0b1;
     border-radius: 5px;
     color: #fff;
- }
+}
  .content a:hover{
     background-color: #2d2d2d;
- }
+}
 
   form .button{
     height: 45px;
-    margin: 35px 0
-  }
+    margin: 35px 0;
+}
   form .button input{
     height: 100%;
     width: 100%;
@@ -108,7 +108,7 @@
     cursor: pointer;
     transition: all 0.3s ease;
     background: linear-gradient(135deg, #FFB352, #9b59b6);
-  }
+}
   form .button input:hover{
 
    background: linear-gradient(-135deg, #FFB352, #9b59b6);
