--- a/welcome.css
+++ b/welcome.css
@@ -5,7 +5,7 @@
     box-sizing: border-box;
     font-family: 'Poppins', Arial, sans-serif;
 }
- .main{
+.main{
     width: 100%;
     min-height:100vh;
     background-image:linear-gradient(rgba(0,0,0,65),rgba(0,0,0,65)) url("citi.jpg");
@@ -14,12 +14,12 @@
     background-size: cover;
 
 }
- .wrapper{
+.wrapper{
     width: 100%;
     padding: 0px 80px;
 
 }
- .navbar{
+.navbar{
     width: 100%;
     display: flex;
     justify-content: space-between;
@@ -28,16 +28,16 @@
     position: relative;
     z-index: 1;
 }
- .navbar ul{
+.navbar ul{
     display: flex;
     justify-content: center;
     align-items: center;
     margin-top:10px;
 }
- .navbar ul li{
+.navbar ul li{
     list-style:none;
 }
- .navbar ul li a{
+.navbar ul li a{
     padding:10px 18px;
     border-radius:5px;
     font-family: sans-serif;
@@ -46,10 +46,10 @@
     text-decoration:none ;
 
 }
- .navbar ul li a:hover{
+.navbar ul li a:hover{
     background-color: #5d5d5d;
 }
- .navbar h1{
+.navbar h1{
     color: #fff;
     font-size: 35px;
     font-weight: 500;
@@ -57,7 +57,7 @@
     margin-top:10px;
 
 }
- .content{
+.content{
     width:100%;
     min-height:100vh;
     position: absolute;
@@ -68,35 +68,21 @@
     align-items: center;
     flex-direction: column;
 }
- .content h1{
+.content h1{
     font-size: 45px;
     color: #fff;
     font-weight: 400;
 }
- .content p{
+.content p{
     font: size 16px;
     color: #fff;
 }
- .content a{
-    text-decoration: none;
-    margin-top: 20px;
-    font-size: 19px;
-    display: in-line-block;
-    letter-spacing:2pX ;
-    padding:12px 20px;
-    background-color: #9de0b1;
-    border-radius: 5px;
-    color: #fff;
-}
- .content a:hover{
-    background-color: #2d2d2d;
-}
 
-  form .button{
+form .button{
     height: 45px;
     margin: 35px 0;
 }
-  form .button input{
+.button input{
     height: 100%;
     width: 100%;
     border-radius: 5px;
@@ -109,7 +95,8 @@
     transition: all 0.3s ease;
     background: linear-gradient(135deg, #FFB352, #9b59b6);
 }
-  form .button input:hover{
+
+.button input:hover{
 
    background: linear-gradient(-135deg, #FFB352, #9b59b6);
 }
