--- a/stylesheet.css
+++ b/stylesheet.css
@@ -32,10 +32,15 @@
   }
 
   footer{
-    font-size: small;
-    margin-top: 10vw;
-    width: auto;
-    height: 20vw;
+    font-size: 0.5vw;
+    margin-top: 15vw;
+    width: 100%;
+    height: 16vw;
     background-color: #FFEBCC;
     text-align: center;
+}
+
+.logo{
+    width: 100%;
+    height: 100%;
 }
