--- a/stylesReg.css
+++ b/stylesReg.css
@@ -11,7 +11,7 @@ body{
   justify-content: center;
   align-items: center;
   padding: 10px;
-  background: linear-gradient(135deg, #FFB352, #9b59b6);
+  background: linear-gradient(135deg, #c9e01a, #62b2d2);
 }
 .container{
   max-width: 700px;
