--- a/stylesheet.css
+++ b/stylesheet.css
@@ -92,3 +92,109 @@
     text-align: center;
     font-size: 18px;
   }
+  @import url('https://fonts.cdnfonts.com/css/neue-helvetica-bq');
+*{
+    margin:0px;
+    padding:0px;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+}
+.main{
+    width: 100%;
+    min-height:100vh;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background: linear-gradient(135deg, #c9e01a, #62b2d2);
+    
+
+}
+.wrapper{
+    width: 100%;
+    padding: 0px 80px;
+
+}
+.navbar{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 0px;
+    position: relative;
+    z-index: 1;
+}
+.logo{
+    width: 45px;
+    height: 50px;
+    cursor:pointer;
+
+}
+.navbar ul{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top:10px;
+}
+.navbar ul li{
+    list-style:none;
+    display: inline-block;
+    margin: 0 20px;
+    position: relative;
+}
+.navbar ul li a{
+    padding:10px 18px;
+    border-radius:5px;
+    font-family: sans-serif;
+    font: size 16px;
+    color:#fff;
+    text-decoration:none ;
+    text-transform: uppercase;
+
+}
+.navbar ul li::after{
+    content: '';
+    height: 3px;
+    width:0;
+    background: #6dbde6;
+    position: absolute;
+    left:0;
+    bottom:-10px;
+    transition: 0.5s;
+}
+.navbar ul li:hover::after{
+    width: 100%;
+}
+
+
+.navbar h1{
+    color: #f4f0f0;
+    font-size: 25px;
+    font-weight: 500;
+    text-transform: uppercase;
+    margin-top:10px;
+
+}
+.content{
+    width:100%;
+    min-height:100vh;
+    position: absolute;
+    top:50%;
+    left:0;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    transform: translateY(-50%);
+}
+.content h1{
+    font-size: 45px;
+    color: #ffffff;
+    font-weight: 400;
+}
+.content p{
+    font: size 16px;
+    color: #010202;
+    font-weight: 100;
+    line-height: 25px;
+}
+
