--- a/stylesheet.css
+++ b/stylesheet.css
@@ -36,7 +36,7 @@
     font-size: 0.5vw;
     width: 100%;
     height: 16vw;
-    background-color: #FFEBCC;
+    background-color: #c9e01a;
     text-align: center;
 }
 
